--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,16 @@ version = "0.0.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
+napi = { version = "2.14",  features = [
+    "async",
+    "tokio_rt",
+    "napi4",
+    "serde-json",
+    "compat-mode",
+] }
 napi-derive = "2.12.2"
 rand = "0.8.5"
+tokio = { version = "1.0", features = ["full"] }
 
 [build-dependencies]
 napi-build = "2.0.1"
